# kapal

./: .env.example  .gitignore  AGENTS.md  CAPTURE_LOGIC.md  PIN_TEST.md  RUNNING.md  config_asv1.md  instruksi.md  langkah.md  lidar_slam_guide.md  peta_ruangan.pgm  peta_ruangan.yaml  program.py  saran_perbaikan.md
best/: data.pkl
best/.data/: serialization_id
best/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+377 more)
lidar_data_bag/: lidar_data_bag_0.mcap  metadata.yaml
models/kapal/: model.config  model.sdf
scripts/: monitor.sh  run.sh  stop.sh
src/asv1/: CMakeLists.txt  package.xml  setup.md
src/asv1/asv1/: bide_trainer.py  node_deteksi.py  node_kamera.py  node_lidar.py  node_misi.py  node_motor.py  sim_bridge.py
src/asv1/config/: asv1_world.sdf  asv1_world_test.sdf  lidar_view.rviz  params.yaml  params_sim.yaml  slam_params.yaml  slam_view.rviz
src/asv1/launch/: asv1.launch.py  asv1_sim.launch.py  asv1_test.launch.py
src/asv1/scripts/: cek_hardware.py  run_gz_test.sh  viewer.py
src/asv1/src/: node_navigasi.cpp
src/asv1/src/plugins/: velocity_controller.cc
src/robot_stack/: CMakeLists.txt  package.xml
src/robot_stack/config/: params.yaml  robot_world.sdf
src/robot_stack/launch/: robot_sim.launch.py  robot_stack.launch.py
src/robot_stack/robot_stack/: autonomous_node.py  lidar_node.py  motor_node.py  vision_node.py
src/robot_stack/src/: lidar_node.cpp  motor_node.cpp
